--- a/www/ajax.html
+++ b/www/ajax.html
@@ -113,7 +113,9 @@ function authorTable(xml) {
 <script>
 function postAuthor(fId, fNavn, eNavn, nasjonalitet){
   var sendXml;
-  sendXml = "<?xml version=1.0 encoding=UTF-8?><forfatter><forfatterID>"+fId+
+  sendXml = "<?xml version=1.0 encoding=UTF-8?>" +
+  "<!DOCTYPE note SYSTEM \"http://bp/forfatter.dtd\">" +
+  "<forfatter><forfatterID>"+fId+
   "</forfatterID><fornavn>"+fNavn+
   "</fornavn><etternavn>"+eNavn+
   "</etternavn><nasjonalitet>"+nasjonalitet+"</nasjonalitet></forfatter>";
@@ -145,7 +147,9 @@ function postAuthTable(resp){
 <!-- Endre forfatter -->
 <script>
 function putAuthor(fId, fNavn, eNavn, nasjonalitet){
-  var sendXml = "<?xml version=1.0 encoding=UTF-8?><forfatter><forfatterID>"+fId+
+  var sendXml = "<?xml version=1.0 encoding=UTF-8?>" +
+  "<!DOCTYPE note SYSTEM \"http://bp/forfatter.dtd\">" +
+  "<forfatter><forfatterID>"+fId+
   "</forfatterID><fornavn>"+fNavn+
   "</fornavn><etternavn>"+eNavn+
   "</etternavn><nasjonalitet>"+nasjonalitet+"</nasjonalitet></forfatter>";
@@ -179,7 +183,9 @@ function putAuthTable(resp){
 <!-- Slette en forfatter -->
 <script>
 function deleteOneAuthor(fId, fNavn, eNavn, nasjonalitet){
- var sendXml = "<?xml version=1.0 encoding=UTF-8?><forfatter><forfatterID>"+fId+
+ var sendXml = "<?xml version=1.0 encoding=UTF-8?>" +
+"<!DOCTYPE note SYSTEM \"http://bp/forfatter.dtd\">" +
+ "<forfatter><forfatterID>"+fId+
  "</forfatterID><fornavn>"+fNavn+
  "</fornavn><etternavn>"+eNavn+
  "</etternavn><nasjonalitet>"+nasjonalitet+"</nasjonalitet></forfatter>";
@@ -264,7 +270,9 @@ function bookTable(xml) {
 <!-- Legg til bok -->
 <script>
 function postBook(bId, tittel, fId){
- var sendXml = "<?xml version=1.0 encoding=UTF-8?><bok><bokID>"+bId+
+ var sendXml = "<?xml version=1.0 encoding=UTF-8?>" +
+"<!DOCTYPE note SYSTEM \"http://bp/bok.dtd\">" +
+ "<bok><bokID>"+bId+
  "</bokID><tittel>"+tittel+
  "</tittel><forfatterID>"+fId+"</forfatterID>></bok>";
  var xhttp = new XMLHttpRequest();
@@ -293,7 +301,9 @@ function postBookTable(resp){
 <!-- Endre bok -->
 <script>
 function putBook(bId, tittel, fId){
- var sendXml = "<?xml version=1.0 encoding=UTF-8?><bok><bokID>"+bId+
+ var sendXml = "<?xml version=1.0 encoding=UTF-8?>" +
+ "<!DOCTYPE note SYSTEM \"http://bp/bok.dtd\">" +
+ "<bok><bokID>"+bId+
  "</bokID><tittel>"+tittel+
  "</tittel><forfatterID>"+fId+"</forfatterID>></bok>";
  var xhttp = new XMLHttpRequest();
@@ -321,7 +331,9 @@ function putBookTable(resp){
 <!-- Slette en bok -->
 <script>
 function deleteOneBook(bId, tittel, fId){
- var sendXml = "<?xml version=1.0 encoding=UTF-8?><bok><bokID>"+bId+
+ var sendXml = "<?xml version=1.0 encoding=UTF-8?>"+
+ "<!DOCTYPE note SYSTEM \"http://bp/bok.dtd\">" +
+ "<bok><bokID>"+bId+
  "</bokID><tittel>"+tittel+
  "</tittel><forfatterID>"+fId+"</forfatterID>></bok>";
  var xhttp = new XMLHttpRequest();
@@ -378,7 +390,9 @@ function deleteAllBookTable(resp){
 
 function login(bNavn, pass) {
   var hash = MD5(pass);
-  var xml =  "<?xml version=\"1.0\" encoding=\"UTF-8\"?><login><brukernavn>"+bNavn+"</brukernavn><passord>"+hash+"</passord></login>";
+  var xml =  "<?xml version=\"1.0\" encoding=\"UTF-8\"?>" +
+  "<!DOCTYPE note SYSTEM \"http://bp/login.dtd\">" +
+  "<login><brukernavn>"+bNavn+"</brukernavn><passord>"+hash+"</passord></login>";
 
   var xhttp = new XMLHttpRequest();
 
